--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,14 @@
   "dependencies": {
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^4.0.1",
-    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "faker": "^4.1.0",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.20"
   }
 }
